@@ -45,14 +45,15 @@
     android:scrollbarThumbVertical="@drawable/shape_scrollbar_rounded">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-      android:id="@+id/constraint_log_container"
+      android:id="@+id/constraint_log"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp">
 
       <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="@dimen/max_content_width"
