@@ -47,15 +47,13 @@
       android:id="@+id/constraint_parallax"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingTop="16dp">
+      android:paddingTop="16dp"
+      android:paddingBottom="8dp">
 
       <LinearLayout
-        android:id="@+id/linear_parallax_container_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_max="@dimen/max_content_width"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +62,8 @@
         <com.google.android.material.card.MaterialCardView
           android:id="@+id/card_parallax_touch_wiz"
           style="@style/Widget.Doodle.Card.Text"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
           android:layout_marginBottom="10dp"
           app:cardBackgroundColor="?attr/colorErrorContainer">
 
@@ -75,19 +75,6 @@
             android:text="@string/parallax_swipe_touch_wiz" />
 
         </com.google.android.material.card.MaterialCardView>
-
-      </LinearLayout>
-
-      <LinearLayout
-        android:id="@+id/linear_parallax_container_items"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/linear_parallax_container_card"
-        app:layout_constraintWidth_max="@dimen/max_content_width"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
           style="@style/Widget.Doodle.TextView.Category"
